# TMS-C

./: .gitignore  HW1.py  HW2.py  HW3.py  HW4.py  HW5.py  lection10.py  lection11.py  lection8.py  lection9.py  lesson12.py  lesson13.py  lesson14.sql  lesson15.py  requirements.txt
TMS_HW2324/: pyproject.toml
TMS_HW2324/posts/: models.py  service.py  views.py
TMS_HW2324/posts/migrations/: 0001_initial.py
TMS_HW2324/project/: settings.py  urls.py
TMS_HW2324/templates/: create_form.html  edit_form.html  note.html  posts-list.html  welcome.html
TMS_HW2526/: .gitignore  pyproject.toml
TMS_HW2526/posts/: models.py  views.py
TMS_HW2526/project/: urls.py
TMS_HW27/: pyproject.toml
TMS_HW27/app/: forms.py  models.py  urls.py  views.py
TMS_HW27/app/migrations/: 0001_initial.py  0002_initial.py  (+1 more)
TMS_HW27/food/: urls.py
TMS_HW27/templates/: create-Ingredient.html  menu.html  welcome.html
TMS_HW27/users/: forms.py  views.py
TMS_HW2829/: pyproject.toml
TMS_HW2829/posts/api/: permissions.py  (+2 more)
TMS_HW2829/project/: urls.py
TMS_HW2829/templates/: menu.html  show-about.html
TMS_HW3031/: .gitignore  pyproject.toml
TMS_HW3031/posts/: admin.py  email.py  forms.py  history.py  logfilemiddleware.py  service.py  views.py
TMS_HW3031/posts/api/: serializers.py  urls.py  views.py
TMS_HW3031/project/: settings.py  urls.py
TMS_HW3031/templates/: edit_form.html  footer.html  menu.html  posts-list.html  profile.html
TMS_HW3031/templates/registration/: login.html.old
TMS_HW3637/: .gitignore  pyproject.toml  test.py  tests.py
TMS_HW3637/drf/: settings.py
TMS_HW3637/events/: test.py
TMS_HW3637/events/api/: serializers.py  views.py
TMS_HW3637/users/: models.py  test.py
TMS_HW3637/users/api/: serializers.py  views.py
TMS_HW3637/users/migrations/: 0001_initial.py
TMS_HW3839/: .gitignore  alembic.ini  main.py  pyproject.toml
TMS_HW3839/async_app/: models.py  urls.py  views.py
TMS_HW3839/async_app/database/: base.py  connector.py
TMS_HW3839/async_app/middleware/: auth.py  storage.py
TMS_HW3839/templates/: base.html
TMS_HW3839/templates/account/: login.html  register.html
TMS_HW3839/templates/notes/: create_form.html  update.html
TMS_HometaskDjangoLesson2122/: db.sqlite3
TMS_HometaskDjangoLesson2122/posts/: models.py  views.py
TMS_HometaskDjangoLesson2122/project/: settings.py  urls.py
TMS_HometaskDjangoLesson2122/templates/: edit_form.html  menu.html  note.html
TMS_HometaskFlask/: crud.py  main.py  pyproject.toml
TMS_HometaskFlaskPart2/: .gitignore  crud.py  main.py  models.py  pyproject.toml
TMS_HometaskFlaskPart2/static/: createpost.css  main.css
TMS_HometaskFlaskPart2/templates/: createpost.html  home.html  notes_view.html
shops/: __init__.py  abstract.py  bookshop.py  compdevices.py  exception.py  product.py  realshop.py
(+16 files in other folders)
